Improve AGENTS.md with build commands, IntelliJ notes, and post-work review guidance